<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android" 
  	android:layout_width="fill_parent" 
  	android:layout_height="fill_parent">
<LinearLayout
  
  android:orientation="vertical"
  android:gravity="center_horizontal"
  android:background="#ffffff"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout
    	android:background="@drawable/main_titlebar_bg"
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:layout_width="fill_parent"
    	android:padding="15dip"
    	android:layout_height="wrap_content">
    	<TextView
    		android:background="@drawable/sub_titlebar_logo"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    	/>
    	<LinearLayout
    		android:layout_marginLeft="10dip"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
	    	<TextView
	    		android:gravity="center"
	    		android:id="@+id/intro_vision_textview"
	    		android:text="공지사항"
	    		android:textSize="20dip"
	    		android:textStyle="bold"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content" 
	    	/>
    	</LinearLayout>
    </LinearLayout>
    <TextView
    	android:background="@drawable/sectionbar"
    	android:padding="5dip"
    	android:textColor="#ffffff"
    	android:text="@string/intro2_title"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <ImageView
    	android:background="@drawable/ks01_intro_vision_content_01"
  		android:layout_width="fill_parent" 
  		android:layout_height="wrap_content"
  	/>
  	
  	<TextView
  		android:background="@drawable/sectionbar"
  		android:padding="5dip"
  		android:textColor="#ffffff"
    	android:text="@string/intro2_title2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/intro2_contents"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#0000FF"
    	android:text="@string/intro2_contents1"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/intro2_contents2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#0000FF"
    	android:text="@string/intro2_contents3"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/intro2_contents4"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#0000FF"
    	android:text="@string/intro2_contents5"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/intro2_contents6"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#0000FF"
    	android:text="@string/intro2_contents7"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/intro2_contents8"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#0000FF"
    	android:text="@string/intro2_contents9"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/intro2_contents10"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
	 <ImageView
	  	  	android:layout_weight="1"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/appmain_copyright"
	  		/>	
    
	</LinearLayout>
</ScrollView> 