<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android" 
  	android:layout_width="fill_parent" 
  	android:layout_height="fill_parent">
<LinearLayout
  
  android:orientation="vertical"
  android:gravity="center_horizontal"
  android:background="#ffffff"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout
    	android:background="@drawable/main_titlebar_bg"
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:layout_width="fill_parent"
    	android:padding="15dip"
    	android:layout_height="wrap_content">
    	<TextView
    		android:background="@drawable/sub_titlebar_logo"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    	/>
    	<LinearLayout
    		android:layout_marginLeft="10dip"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
	    	<TextView
	    		android:gravity="center"
	    		android:text="종합인력개발센터"
	    		android:textSize="20dip"
	    		android:textStyle="bold"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content" 
	    	/>
    	</LinearLayout>
    </LinearLayout>
 	
 	<ImageView
	  	  	android:layout_weight="1"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/jobcenter"
	  		/>	
 	
 	<TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/job_center_title"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:background="@drawable/sectionbar"
    	android:padding="5dip"
    	android:textColor="#ffffff"
    	android:text="@string/job_center_content_title1"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/job_center_content_memo1"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:background="@drawable/sectionbar"
    	android:padding="5dip"
    	android:textColor="#ffffff"
    	android:text="@string/job_center_content_title2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/job_center_content_memo2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
		android:background="@drawable/sectionbar"    
    	android:padding="5dip"
    	android:textColor="#ffffff"
    	android:text="@string/job_center_content_title3"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
    
    <TextView
    	android:padding="5dip"
    	android:textColor="#000000"
    	android:text="@string/job_center_content_memo3"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    />
 	
 	
 	<RelativeLayout 
 		android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
 	<ImageView
	  	  	android:layout_weight="1"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/appmain_copyright"
	  		/>	
    </RelativeLayout>
	</LinearLayout>
</ScrollView>