<?xml version="1.0" encoding="utf-8"?>

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:gravity="center_horizontal"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:gravity="center_horizontal"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
	<LinearLayout
    	android:background="@drawable/main_titlebar_bg"
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:layout_width="fill_parent"
    	android:padding="15dip"
    	android:layout_height="wrap_content">
    	<TextView
    		android:background="@drawable/sub_titlebar_logo"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    	/>
    	<LinearLayout
    		android:layout_marginLeft="10dip"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
	    	<TextView
	    		android:gravity="center"
	    		android:text="등록금"
	    		android:textSize="20dip"
	    		android:textStyle="bold"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content" 
	    	/>
    	</LinearLayout>
    </LinearLayout>
      
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:id="@+id/linearLayout1" 
    	android:layout_height="wrap_content">
	        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:layout_weight="1" 
	        android:padding="10dip"
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView1" 
	        android:text="학과명" 
	        android:layout_height="wrap_content"></TextView>
	        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:padding="10dip"
	        android:gravity="center_vertical"
	        android:layout_weight="1" 
	        android:layout_width="fill_parent" 
	        android:text="입학금"
	         android:layout_height="wrap_content"></TextView>
	        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:padding="10dip"
	        android:gravity="center_vertical"
	        android:layout_weight="1" 
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView3" 
	        android:text="등록금" 
	        android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:gravity="center_vertical"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView4" 
	        android:text="@string/faq_row1_col1" 
	        android:layout_height="fill_parent"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView5" 
	        android:text="@string/faq_row1_col2" 
	        android:layout_height="fill_parent"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView6" 
	        android:text="@string/faq_row1_col3" 
	        android:layout_height="fill_parent"></TextView>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView4" 
	        android:text="@string/faq_row2_col1" 
	        android:layout_height="fill_parent"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView5" 
	        android:text="@string/faq_row2_col2" 
	        android:layout_height="fill_parent"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView6" 
	        android:text="@string/faq_row2_col3" 
	        android:layout_height="fill_parent"></TextView>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView4" 
	        android:text="@string/faq_row3_col1" 
	        android:layout_height="fill_parent"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView5" 
	        android:text="@string/faq_row3_col2" 
	        android:layout_height="fill_parent"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView6" 
	        android:text="@string/faq_row3_col3" 
	        android:layout_height="fill_parent"></TextView>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView4" 
	        android:text="@string/faq_row4_col1" 
	        android:layout_height="wrap_content"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView5" 
	        android:text="@string/faq_row4_col2" 
	        android:layout_height="fill_parent"></TextView>
        <TextView 
	        android:background="@drawable/xml_boarder" 
	        android:textColor="#000000"
	        android:padding="10dip"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_weight="1" 
	        android:gravity="center_vertical"
	        android:layout_width="fill_parent" 
	        android:id="@+id/textView6" 
	        android:text="@string/faq_row4_col3" 
	        android:layout_height="fill_parent"></TextView>
    </LinearLayout>
    <LinearLayout
    	android:background="@drawable/main_copyright_bg"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<ImageView
    		android:background="@drawable/main_copyright_text"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    	/>
    </LinearLayout>
    
  </LinearLayout>
 </ScrollView>